--- a/github-user-search-engine/package.json
+++ b/github-user-search-engine/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-simple-typeahead": "^1.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
