--- a/github-user-search-engine/package.json
+++ b/github-user-search-engine/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.3",
     "vue3-simple-typeahead": "^1.0.5",
     "vuex": "^4.0.0"
