--- a/github-user-search-engine/package.json
+++ b/github-user-search-engine/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-vue-3": "^0.1.13",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-loading-overlay": "^5.0.3",
