--- a/github-user-search-engine/.env
+++ b/github-user-search-engine/.env
@@ -1,3 +1,2 @@
-//THE KEY WAS NOT IN THE REPOSITORY
-
-VUE_APP_API_GITHUB_KEY = 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;
+# THE KEY WAS NOT IN THE REPOSITORY
+VUE_APP_API_GITHUB_KEY=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
