Fixing bugs. Generated new access token API Github,

--- a/github-user-search-engine/.env
+++ b/github-user-search-engine/.env
@@ -1,2 +1,2 @@
-# THE KEY WAS NOT IN THE REPOSITORY
-VUE_APP_API_GITHUB_KEY=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
+# THE KEY SHOULDN'T BE IN THE REPOSITORY
+VUE_APP_API_GITHUB_KEY=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
