Updated file .env API and deleted not using README.md

--- a/github-user-search-engine/.env
+++ b/github-user-search-engine/.env
@@ -1,2 +1,3 @@
 # THE KEY SHOULDN'T BE IN THE REPOSITORY
-VUE_APP_API_GITHUB_KEY=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
+
+VUE_APP_API_GITHUB_KEY= <your token>
